styles/layout.css
.directory {
  background: repeating-linear-gradient(
    transparent,
    transparent calc(var(--book-height)),
    var(--shelf-color) calc(var(--book-height)),
    var(--shelf-color) calc(var(--book-height) + var(--shelf-thickness))
  );
  display: flex;
  flex-wrap: wrap;
  gap: 5px;
  justify-content: flex-start;
  list-style: none;
  padding: 0 10px;
  position: relative;
}

.directory li {
  display: flex;
  margin: 10px 0;
  position: relative;
  transform: rotate(var(--book-tilt));
  width: 60px;
}

.directory span {
  align-items: center;
  border-radius: 4px;
  box-shadow:
    inset 0 0 10px rgba(var(--color-black), 0.5),
    0 0 8px rgba(var(--color-black), 0.5);
  display: flex;
  font-size: 1.25rem;
  height: 200px;
  justify-content: center;
  text-align: center;
  text-orientation: mixed;
  transform-origin: bottom left;
  width: 50px;
  writing-mode: vertical-rl;
}

.directory li > span {
  border-left: 3px solid rgba(var(--color-gold), 0.25);
  border-right: 3px solid rgba(var(--color-gold), 0.25);
  color: rgba(var(--color-white), 0.5);
}

.directory li a {
  color: rgba(var(--color-white), 1);
  text-decoration: none;
}

.directory li a span {
  border-left: 3px solid rgba(var(--color-gold), 0.5);
  border-radius: 4px;
  border-right: 3px solid rgba(var(--color-gold), 0.5);
}

.directory li a:hover span {
  border-left-color: rgba(var(--color-gold), 0.75);
  border-right-color: rgba(var(--color-gold), 0.75);
  color: rgba(var(--color-gold), 1);
}

